[package]
name = "nessy"
version = "0.1.0"
authors = ["nathsou <nathsou@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bitflags = "2.3.1"
wasm-bindgen = "0.2.87"
console_error_panic_hook = {version = "0.1.7", optional = true }
sha2 = "0.10.7"

[profile.release]
opt-level = 3
