[package]
name = "nessy-web"
version = "0.1.0"
authors = ["nathsou"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
nessy = { path = "../" }
wasm-bindgen = "0.2.87"
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = 3
